--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">My projects</a>
+  <a href="#contact">More information</a>
+  <a href="#about">Additional Projects</a>
+</div>
     <div id = 'topdiv'>
     <h1>About me</h1>
     </div>
