added a lot, more jquery as well

--- a/myprojects.html
+++ b/myprojects.html
@@ -16,18 +16,27 @@
   <a href="contactme.html">Contact me</a>
 </div>
     <div id = 'topdiv'>
-    <h1 id = 'aboutme'>About me</h1>
+    <h1>My Projects</h1>
     </div>
-    <button id = "hide"><i>Click me for the picture menu.</i></button>
+    <button id = "linktreebutton"><a id = 'linktreetext' href = 'https://linktr.ee/NikhilDevaraj'>Click here to go to my Linktree</a></button>
+    <br><br>
+    <button id = 'mainprojectbutton'>Click below to see my project links!</button>
     <br>
     <br>
-    <img src="liluzi.jpg" alt="" id = 'mypicture'>
+    <div id = 'projectdiv'>
+    <button id = 'projectbuttons'>Python Project: Bubble Popper</button>
     <br>
     <br>
-    <button id = 'button'>Bring in information about me!</button>
+    <button id = 'projectbuttons'>HTML/CSS/JS: Calculator</button>
     <br>
     <br>
-    <div id = 'div1' >My name is Nikhil Devaraj and I am from Austin, Texas! I am 15 and love to code. I am best at Python, but love HTML, CSS, and Javascript. I am working on building a app for a non profit I started!</div>
+    <button id = 'projectbuttons'>My non-profit</button>
+    <br>
+    <br>
+    </div>
+    <br>
+    <br>
+    <div id = 'div1' >test</div>
 <script src="script.js"></script>
 
   </body>
